# Eurostat-Energy-AI-Platform

./: .gitignore  .tool-versions  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: dependencies.py  main.py  schemas.py
api/routers/: data.py  forecast.py  insights.py
app/: streamlit_app.py
backend/: __init__.py  run_app.py
backend/api/: __init__.py  main.py  schemas.py  services.py
backend/core/: __init__.py  database.py
backend/etl/: config.py  load.py  main.py
backend/llm_app/: build_knowledge_base.py
backend/services/: __init__.py  assistant.py  forecasting.py  observations.py
backend/services/ai/: __init__.py  chatbot.py  rag_engine.py
backend/services/analytics/: __init__.py  common.py  explorer.py  metadata.py  overview.py
backend/services/models/: __init__.py  forecast_utils.py
backend/tests/: test_transform.py
backend/viz/: viz_utils.py
etl/: config.py  extract.py  main.py  transform.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  App.tsx  index.css  main.jsx  styles.css
frontend/src/api/: client.ts
frontend/src/app/: App.jsx
frontend/src/components/: ErrorAlert.tsx  KPICard.tsx  Panel.jsx  Sidebar.tsx  Spinner.tsx  StatCard.jsx
frontend/src/features/ai-agent/: AiAgentPage.jsx
frontend/src/pages/: AIInsights.tsx  DataExplorer.tsx  Forecasting.tsx  Overview.tsx
frontend/src/styles/: global.css
llm_app/: chatbot.py  rag_engine.py
ml/: forecast_utils.py
tests/: test_transform.py
(+10 files in other folders)
