[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eurostat-energy-ai-platform"
version = "0.1.0"
description = "Eurostat Energy AI Platform backend + frontend monorepo"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "pandas==2.2.0",
  "requests==2.31.0",
  "sqlalchemy==2.0.25",
  "psycopg2-binary==2.9.9",
  "fastapi==0.115.2",
  "uvicorn==0.32.0",
  "matplotlib==3.8.2",
  "seaborn==0.13.2",
  "python-dotenv==1.0.1",
  "statsmodels==0.14.1",
  "xgboost==2.0.3",
  "scikit-learn==1.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.0.0",
  "mypy==1.19.1",
  "types-requests==2.31.0.20240406",
]

[project.scripts]
run-app = "backend.run_app:main"

[tool.mypy]
python_version = "3.11"
files = ["backend"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
pretty = true

[tool.setuptools.packages.find]
include = ["backend*"]
